--- a/html/paiement.html
+++ b/html/paiement.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>paiement</title>
-    <link rel="stylesheet" type="text/css" href="css/paiement.css">
+    <link rel="stylesheet" type="text/css" href="/css/paiement.css">
    
 </head>
 
