--- a/html/panier.html
+++ b/html/panier.html
@@ -3,9 +3,8 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <meta name="author" content="elaa mokrani">
-    <link rel="stylesheet" href="css/panier.css">
-    <link rel="stylesheet" href="js/panier.js">
+    <link rel="stylesheet" href="/css/panier.css">
+    <link rel="stylesheet" href="/js/panier.js">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js">
     </script>
@@ -15,19 +14,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>panier</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <script src="js/jquery-3.4.1.min.js"></script>
-  <script src="js/popper.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/main.js"></script>
+  <script src="/js/jquery-3.4.1.min.js"></script>
+  <script src="/js/popper.min.js"></script>
+  <script src="/js/bootstrap.min.js"></script>
+  <script src="/js/main.js"></script>
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="fontawesome" crossorigin="anonymous"/>
-  <link rel="stylesheet" href="css/bootstrap.min.css"/>
-  <link rel="stylesheet" href="css/fontawesome.min.css"/>
+  <link rel="stylesheet" href="/css/bootstrap.min.css"/>
+  <link rel="stylesheet" href="/css/fontawesome.min.css"/>
 </head>
 
 <body>
   <!--start navbar-->
 <nav class="navbar navbar-expand-lg" >
-  <img src="img/fotor_2023-3-22_15_7_54.png" class="logo">
+  <img src="/img/fotor_2023-3-22_15_7_54.png" class="logo">
   <div class="containernav">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -43,9 +42,9 @@
            <span>Homme</span>
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="homme sportwear.html"><span>Sportwear</span></a>
+              <a class="dropdown-item" href="/html/homme sportwear.html"><span>Sportwear</span></a>
               <a class="dropdown-item" href="#"><span>Pantalon</span></a>
-              <a class="dropdown-item" href="chaussure homme.html"><span>Chaussures</span></a>
+              <a class="dropdown-item" href="/html/chaussure homme.html"><span>Chaussures</span></a>
            
           </div>
         </li>
@@ -55,9 +54,9 @@
            <span>Femme</span>
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="chemise-f.html"><span>Chemise</span></a>
-            <a class="dropdown-item" href="pantalon-f.html"><span> Pantalon</span></a>
-            <a class="dropdown-item" href="chaussures-f.html"><span>Chaussures</span></a>
+            <a class="dropdown-item" href="/html/chemise-f.html"><span>Chemise</span></a>
+            <a class="dropdown-item" href="/html/pantalon-f.html"><span> Pantalon</span></a>
+            <a class="dropdown-item" href="/html/chaussures-f.html"><span>Chaussures</span></a>
           </div>
         </li>
          <li class="nav-item dropdown">
@@ -65,9 +64,9 @@
             <span>Kids</span>
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="new born clothes.html"><span>Chemise</span></a>
-                <a class="dropdown-item" href="kids clothes.html"><span>Pantalon</span></a>
-                <a class="dropdown-item" href="kids shoes.html"><span>Chaussures</span></a>
+                <a class="dropdown-item" href="/html/new born clothes.html"><span>Chemise</span></a>
+                <a class="dropdown-item" href="/html/kids clothes.html"><span>Pantalon</span></a>
+                <a class="dropdown-item" href="/html/kids shoes.html"><span>Chaussures</span></a>
             </div>
         </li>
       </ul>
@@ -76,12 +75,12 @@
   </div>
   <div class="right-icons">
     <a href="#"><i class="fa fa-heart"></i></a>
-    <a href="#"><i class="fa fa-shopping-cart"></i></a>
-    <a href="#"><i class="fa fa-user-plus"></i></a>
+    <a href="/html/panier.html"><i class="fa fa-shopping-cart"></i></a>
+    <a href="/html/sign-up.html"><i class="fa fa-user-plus"></i></a>
   </div>
 
   </nav>
-  <!--end navbar-->  
+  <!--end navbar-->   
   <main>
     <div class="basket">
       <div class="basket-module">
