--- a/html/profile.html
+++ b/html/profile.html
@@ -3,12 +3,11 @@
 <head>
  
 	<meta charset="utf-8">
-<meta name="author" content="elaa mokrani">
 	<title>edit profil</title>
-  <link rel="stylesheet" href="css/cssProfile.css">
+  <link rel="stylesheet" href="/css/cssProfile.css">
 </head>
 <header>
-    	<img  src="img/fotor_2023-3-22_15_7_54.png">
+    	<img  src="/img/fotor_2023-3-22_15_7_54.png">
 	<link rel="stylesheet" type="text/css" href="edit.css">
 	<center><h1 > Edit profil   </h1>
 	</center>
@@ -20,7 +19,7 @@
 
 <form action="upload.php" method="post" enctype="multipart/form-data">
   <label for="image-input">
-    <img src="img/Unknown_person.jpg" alt="Choose image">
+    <img src="/img/Unknown_person.jpg" alt="Choose image">
   </label>
   <input id="image-input" type="file" name="image" style="display:none;">
   <br><br>
