--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="login.html"><span>Home</span><span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="index.html"><span>Home</span><span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
            <span>Homme</span>
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="homme sportwear.html"><span>Sportwear</span></a>
+              <a class="dropdown-item" href="html/homme sportwear.html"><span>Sportwear</span></a>
               <a class="dropdown-item" href="#"><span>Pantalon</span></a>
-              <a class="dropdown-item" href="chaussure homme.html"><span>Chaussures</span></a>
+              <a class="dropdown-item" href="html/chaussure homme.html"><span>Chaussures</span></a>
            
           </div>
         </li>
@@ -46,9 +46,9 @@
            <span>Femme</span>
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="chemise-f.html"><span>Chemise</span></a>
-            <a class="dropdown-item" href="pantalon-f.html"><span> Pantalon</span></a>
-            <a class="dropdown-item" href="chaussures-f.html"><span>Chaussures</span></a>
+            <a class="dropdown-item" href="html/chemise-f.html"><span>Chemise</span></a>
+            <a class="dropdown-item" href="html/pantalon-f.html"><span> Pantalon</span></a>
+            <a class="dropdown-item" href="html/chaussures-f.html"><span>Chaussures</span></a>
           </div>
         </li>
          <li class="nav-item dropdown">
@@ -56,9 +56,9 @@
             <span>Kids</span>
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="new born clothes.html"><span>Chemise</span></a>
-                <a class="dropdown-item" href="kids clothes.html"><span>Pantalon</span></a>
-                <a class="dropdown-item" href="kids shoes.html"><span>Chaussures</span></a>
+                <a class="dropdown-item" href="html/new born clothes.html"><span>Chemise</span></a>
+                <a class="dropdown-item" href="html/kids clothes.html"><span>Pantalon</span></a>
+                <a class="dropdown-item" href="html/kids shoes.html"><span>Chaussures</span></a>
             </div>
         </li>
       </ul>
@@ -67,8 +67,8 @@
   </div>
   <div class="right-icons">
     <a href="#"><i class="fa fa-heart"></i></a>
-    <a href="#"><i class="fa fa-shopping-cart"></i></a>
-    <a href="#"><i class="fa fa-user-plus"></i></a>
+    <a href="html/panier"><i class="fa fa-shopping-cart"></i></a>
+    <a href="html/sign-up"><i class="fa fa-user-plus"></i></a>
   </div>
 
   </nav>
