--- a/html/chaussure homme.html
+++ b/html/chaussure homme.html
@@ -3,8 +3,8 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="/css/cssChaussure.css">
-    <link rel="stylesheet" href="/css/signup.css">
+    <link rel="stylesheet" href="../css/cssChaussure.css">
+    <link rel="stylesheet" href="../css/signup.css">
     <link rel="stylesheet" href="exp.css">
     <link rel="stylesheet" href="exp.js">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="fontawesome" crossorigin="anonymous"/>
@@ -15,13 +15,13 @@
     </script>
     <title>homme</title>
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="fontawesome" crossorigin="anonymous"/>
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/fontawesome.min.css">
-    <link rel="stylesheet" href="/colors.css"/>
-    <script src="/js/bootstrap.min.js"></script>
-    <script src="/js/jquery-3.4.1.min.js"></script>
-    <script src="/js/popper.min.js"></script>
-    <script src="/js/main.js"></script>
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/fontawesome.min.css">
+    <link rel="stylesheet" href="../css/colors.css"/>
+    <script src="../js/bootstrap.min.js"></script>
+    <script src="../js/jquery-3.4.1.min.js"></script>
+    <script src="../js/popper.min.js"></script>
+    <script src="../js/main.js"></script>
 </head>
 <body bgcolor="#E4E1E1">
 
