--- a/html/chaussures-f.html
+++ b/html/chaussures-f.html
@@ -13,8 +13,8 @@
     <script src="../js/main.js"></script>
     <meta charset="utf-8">
     
-    <link rel="stylesheet" href="exp.css">
-    <link rel="stylesheet" href="exp.js">
+    <link rel="stylesheet" href="../exp.css">
+    <link rel="stylesheet" href="../exp.js">
     <link rel="stylesheet" href="../css/homme-sport.css"> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -26,7 +26,7 @@
 
 <!--start navbar-->
 <nav class="navbar navbar-expand-lg" >
-    <img src="../img/fotor_2023-3-22_15_7_54.png" class="logo">
+    <img src="/img/fotor_2023-3-22_15_7_54.png" class="logo">
     <div class="containernav">
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -42,9 +42,9 @@
              <span>Homme</span>
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="/html/homme sportwear.html"><span>Sportwear</span></a>
+                <a class="dropdown-item" href="../html/homme sportwear.html"><span>Sportwear</span></a>
                 <a class="dropdown-item" href="#"><span>Pantalon</span></a>
-                <a class="dropdown-item" href="/html/chaussure homme.html"><span>Chaussures</span></a>
+                <a class="dropdown-item" href="../html/chaussure homme.html"><span>Chaussures</span></a>
              
             </div>
           </li>
@@ -54,9 +54,9 @@
              <span>Femme</span>
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="/html/chemise-f.html"><span>Chemise</span></a>
-              <a class="dropdown-item" href="/html/pantalon-f.html"><span> Pantalon</span></a>
-              <a class="dropdown-item" href="/html/chaussures-f.html"><span>Chaussures</span></a>
+              <a class="dropdown-item" href="../html/chemise-f.html"><span>Chemise</span></a>
+              <a class="dropdown-item" href="../html/pantalon-f.html"><span> Pantalon</span></a>
+              <a class="dropdown-item" href="../html/chaussures-f.html"><span>Chaussures</span></a>
             </div>
           </li>
            <li class="nav-item dropdown">
