--- a/html/chemise-f.html
+++ b/html/chemise-f.html
@@ -2,9 +2,9 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="exp.css">
-    <link rel="stylesheet" href="exp.js">
-    <link rel="stylesheet" href="/css/homme-sport.css">
+    <link rel="stylesheet" href="../exp.css">
+    <link rel="stylesheet" href="../exp.js">
+    <link rel="stylesheet" href="../css/homme-sport.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js">
     </script>
@@ -13,14 +13,14 @@
     <title>Femme</title>
    
         <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="fontawesome" crossorigin="anonymous"/>
-        <link rel="stylesheet" href="/css/bootstrap.min.css">
-        <link rel="stylesheet" href="/css/fontawesome.min.css">
-        <link rel="stylesheet" href="/css/signup.css">
-        <link rel="stylesheet" href="/colors.css"/>
-        <script src="/js/bootstrap.min.js"></script>
-        <script src="/js/jquery-3.4.1.min.js"></script>
-        <script src="/js/popper.min.js"></script>
-        <script src="/js/main.js"></script>
+        <link rel="stylesheet" href="../css/bootstrap.min.css">
+        <link rel="stylesheet" href="../css/fontawesome.min.css">
+        <link rel="stylesheet" href="../css/signup.css">
+        <link rel="stylesheet" href="../colors.css"/>
+        <script src="../js/bootstrap.min.js"></script>
+        <script src="../js/jquery-3.4.1.min.js"></script>
+        <script src="../js/popper.min.js"></script>
+        <script src="../js/main.js"></script>
 </head>
 <body bgcolor="#E4E1E1">
 
