--- a/html/chaussure homme.html
+++ b/html/chaussure homme.html
@@ -27,7 +27,7 @@
 
 <!--start navbar-->
 <nav class="navbar navbar-expand-lg" >
-    <img src="/img/fotor_2023-3-22_15_7_54.png" class="logo">
+    <img src="../img/fotor_2023-3-22_15_7_54.png" class="logo">
     <div class="containernav">
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
