--- a/html/chemise-f.html
+++ b/html/chemise-f.html
@@ -10,7 +10,7 @@
     </script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js">
     </script>
-    <title>Femme</title>
+    <title>Chemise femme</title>
    
         <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="fontawesome" crossorigin="anonymous"/>
         <link rel="stylesheet" href="../css/bootstrap.min.css">
@@ -26,7 +26,7 @@
 
 <!--start navbar-->
 <nav class="navbar navbar-expand-lg" >
-    <img src="/img/fotor_2023-3-22_15_7_54.png" class="logo">
+    <img src="../img/fotor_2023-3-22_15_7_54.png" class="logo">
     <div class="containernav">
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
