--- a/html/new born clothes.html
+++ b/html/new born clothes.html
@@ -3,9 +3,9 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="/css/new-born.css">
-    <link rel="stylesheet" href="exp.css">
-    <link rel="stylesheet" href="exp.js">
+    <link rel="stylesheet" href="../css/new-born.css">
+    <link rel="stylesheet" href="../exp.css">
+    <link rel="stylesheet" href="../exp.js">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js">
@@ -15,20 +15,20 @@
     </script>
     <title>kids</title>
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="fontawesome" crossorigin="anonymous"/>
-    <link rel="stylesheet" href="/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="/css/fontawesome.min.css"/>
-    <link rel="stylesheet" href="/css/signup.css"/>
-    <link rel="stylesheet" href="/colors.css"/>
-    <script src="/js/jquery-3.4.1.min.js"></script>
-    <script src="/js/popper.min.js"></script>
-    <script src="/js/bootstrap.min.js"></script>
-    <script src="/js/main.js"></script>
+    <link rel="stylesheet" href="../css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="../css/fontawesome.min.css"/>
+    <link rel="stylesheet" href="../css/signup.css"/>
+    <link rel="stylesheet" href="../colors.css"/>
+    <script src="../js/jquery-3.4.1.min.js"></script>
+    <script src="../js/popper.min.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
+    <script src="../js/main.js"></script>
 </head>
 <body bgcolor="#E4E1E1">
 
 <!--start navbar-->
 <nav class="navbar navbar-expand-lg" >
-    <img src="/img/fotor_2023-3-22_15_7_54.png" class="logo">
+    <img src="../img/fotor_2023-3-22_15_7_54.png" class="logo">
     <div class="containernav">
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
