--- a/html/sign-up.html
+++ b/html/sign-up.html
@@ -5,20 +5,20 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Sign up </title>
         <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="fontawesome" crossorigin="anonymous"/>
-        <link rel="stylesheet" href="/css/bootstrap.min.css"/>
-        <link rel="stylesheet" href="/css/fontawesome.min.css"/>
-        <link rel="stylesheet" href="/css/signup.css"/>
-        <link rel="stylesheet" href="/colors.css"/>
-        <script src="/js/jquery-3.4.1.min.js"></script>
-        <script src="/js/popper.min.js"></script>
-        <script src="/js/bootstrap.min.js"></script>
-        <script src="/js/main.js"></script>
+        <link rel="stylesheet" href="../css/bootstrap.min.css"/>
+        <link rel="stylesheet" href="../css/fontawesome.min.css"/>
+        <link rel="stylesheet" href="../css/signup.css"/>
+        <link rel="stylesheet" href="../colors.css"/>
+        <script src="../js/jquery-3.4.1.min.js"></script>
+        <script src="../js/popper.min.js"></script>
+        <script src="../js/bootstrap.min.js"></script>
+        <script src="../js/main.js"></script>
         
     </head>
     <body>
 <!--start navbar-->
 <nav class="navbar navbar-expand-lg" >
-  <img src="/img/fotor_2023-3-22_15_7_54.png" class="logo">
+  <img src="../img/fotor_2023-3-22_15_7_54.png" class="logo">
   <div class="containernav">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
