--- a/html/profile.html
+++ b/html/profile.html
@@ -4,10 +4,10 @@
  
 	<meta charset="utf-8">
 	<title>edit profil</title>
-  <link rel="stylesheet" href="/css/cssProfile.css">
+  <link rel="stylesheet" href="../css/cssProfile.css">
 </head>
 <header>
-    	<img  src="/img/fotor_2023-3-22_15_7_54.png">
+    	<img  src="../img/fotor_2023-3-22_15_7_54.png">
 	<link rel="stylesheet" type="text/css" href="edit.css">
 	<center><h1 > Edit profil   </h1>
 	</center>
@@ -19,7 +19,7 @@
 
 <form action="upload.php" method="post" enctype="multipart/form-data">
   <label for="image-input">
-    <img src="/img/Unknown_person.jpg" alt="Choose image">
+    <img src="../img/Unknown_person.jpg" alt="Choose image">
   </label>
   <input id="image-input" type="file" name="image" style="display:none;">
   <br><br>
@@ -41,7 +41,7 @@
     <input  	type="date" id="date" name="date"  placeholder=""><br>
     <button >save change</button>
    </form>
-	<script src="script.js"></script><!--start footer-->
+	<script src="../script.js"></script><!--start footer-->
 
 </body>
 
