--- a/html/pantalon-f.html
+++ b/html/pantalon-f.html
@@ -2,18 +2,18 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="exp.css">
-    <link rel="stylesheet" href="exp.js">
-    <link rel="stylesheet" href="/css/pantalon-f.css">
-    <link rel="stylesheet" href="/css/signup.css">
+    <link rel="stylesheet" href="../exp.css">
+    <link rel="stylesheet" href="../exp.js">
+    <link rel="stylesheet" href="../css/pantalon-f.css">
+    <link rel="stylesheet" href="../css/signup.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="/js/jquery-3.4.1.min.js"></script>
-    <script src="/js/popper.min.js"></script>
-    <script src="/js/bootstrap.min.js"></script>
-    <script src="/js/main.js"></script>
+    <script src="../js/jquery-3.4.1.min.js"></script>
+    <script src="../js/popper.min.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
+    <script src="../js/main.js"></script>
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="fontawesome" crossorigin="anonymous"/>
-    <link rel="stylesheet" href="/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="/css/fontawesome.min.css"/>
+    <link rel="stylesheet" href="../css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="../css/fontawesome.min.css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script> 
     <title>Pantalon Femme</title>
@@ -22,7 +22,7 @@
 
 <!--start navbar-->
 <nav class="navbar navbar-expand-lg" >
-    <img src="/img/fotor_2023-3-22_15_7_54.png" class="logo">
+    <img src="../img/fotor_2023-3-22_15_7_54.png" class="logo">
     <div class="containernav">
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
