--- a/html/panier.html
+++ b/html/panier.html
@@ -3,8 +3,8 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="/css/panier.css">
-    <link rel="stylesheet" href="/js/panier.js">
+    <link rel="stylesheet" href="../css/panier.css">
+    <link rel="stylesheet" href="../js/panier.js">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js">
     </script>
@@ -14,19 +14,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>panier</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <script src="/js/jquery-3.4.1.min.js"></script>
-  <script src="/js/popper.min.js"></script>
-  <script src="/js/bootstrap.min.js"></script>
-  <script src="/js/main.js"></script>
+  <script src="../js/jquery-3.4.1.min.js"></script>
+  <script src="../js/popper.min.js"></script>
+  <script src="../js/bootstrap.min.js"></script>
+  <script src="../js/main.js"></script>
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="fontawesome" crossorigin="anonymous"/>
-  <link rel="stylesheet" href="/css/bootstrap.min.css"/>
-  <link rel="stylesheet" href="/css/fontawesome.min.css"/>
+  <link rel="stylesheet" href="../css/bootstrap.min.css"/>
+  <link rel="stylesheet" href="../css/fontawesome.min.css"/>
 </head>
 
 <body>
   <!--start navbar-->
 <nav class="navbar navbar-expand-lg" >
-  <img src="/img/fotor_2023-3-22_15_7_54.png" class="logo">
+  <img src="../img/fotor_2023-3-22_15_7_54.png" class="logo">
   <div class="containernav">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -191,7 +191,7 @@
         <div class="summary-checkout">
          
 
-    <button class="btn"  onclick="window.location.href = 'paiement.html';">   confirm and pay</button>
+    <button class="btn"  onclick="window.location.href = 'paiement.html';"><a href="../html/paiement.html"> confirm and pay</a>  </button>
 
 
 </a> 
