--- a/html/paisu.html
+++ b/html/paisu.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="/css/paisu.css">
+    <link rel="stylesheet" href="../css/paisu.css">
     <title>Succés de paiement</title>
 
 </head>
@@ -47,7 +47,7 @@
                  
                   <footer>
     
-                 <button class="btn"><a href="/login.html">Back to home </a> </button>
+                 <button class="btn"><a href="../login.html">Back to home </a> </button>
                   </footer>
             </div>
         </div>
