--- a/html/paiement.html
+++ b/html/paiement.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>paiement</title>
-    <link rel="stylesheet" type="text/css" href="/css/paiement.css">
+    <link rel="stylesheet" type="text/css" href="../css/paiement.css">
    
 </head>
 
@@ -64,8 +64,8 @@
   </div><!--row end-->
   <footer>
     
-    <button class="btn"  onclick="window.location.href = 'panier.html';">   Back</button>
-    <button class="btn"  onclick="window.location.href = 'pai-post.html';"> Next Step</button>
+    <button class="btn"  onclick="window.location.href = 'panier.html';"><a href="../panier.html"> Back</a>   </button>
+    <button class="btn"  onclick="window.location.href = 'pai-post.html';"><a href="../pai-post.html"> Next Step</a></button>
   </footer>
 </div><!--wrapper end-->
 <!---------------------------------->
