--- a/html/pai-post.html
+++ b/html/pai-post.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>paiement</title>
-    <link rel="stylesheet" href="/css/pai-post.css">
+    <link rel="stylesheet" href="../css/pai-post.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="fontawesome" crossorigin="anonymous"/>
 
@@ -29,8 +29,8 @@
           
             <footer>
 
-             <button class="btn"  onclick="window.location.href = 'paiement.html';"><a href="/html/paiement.html"> Back</a>  </button>
-            <button class="btn"  onclick="window.location.href = 'paisu.html';"><a href="/html/paisu.html">Next Step</a> </button>
+             <button class="btn"  onclick="window.location.href = 'paiement.html';"><a href="../html/paiement.html"> Back</a>  </button>
+            <button class="btn"  onclick="window.location.href = 'paisu.html';"><a href="../html/paisu.html">Next Step</a> </button>
 
          </footer>
         </div>
